--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: My Website
+title: Jay's Notes
 
 # Your name to show in the footer
 author: Jay Butera
@@ -14,7 +14,7 @@ author: Jay Butera
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "aboutme"
+  #About Me: "aboutme"
   #Resources:
   #  - Beautiful Jekyll: "https://beautifuljekyll.com"
   #  - Learn markdown: "https://www.markdowntutorial.com/"
